--- a/src/main/resources/ArtisteCard.fxml
+++ b/src/main/resources/ArtisteCard.fxml
@@ -3,35 +3,42 @@
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="336.0" prefWidth="279.0" stylesheets="@../../../../../../../tunArtProject-Ghaith-branch/src/main/resources/dashboardDesign.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.OeuvreCardController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="336.0" prefWidth="279.0" stylesheets="@../../../../../../../tunArtProject-Ghaith-branch/src/main/resources/dashboardDesign.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ArtisteCardController">
    <children>
       <VBox layoutX="75.0" layoutY="25.0" prefHeight="336.0" prefWidth="279.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <AnchorPane prefHeight="300.0" prefWidth="279.0">
+            <AnchorPane prefHeight="258.0" prefWidth="250.0">
                <children>
-                  <ImageView fx:id="img" fitHeight="138.0" fitWidth="207.0" layoutX="36.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="imgart" fitHeight="138.0" fitWidth="207.0" layoutX="36.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true" />
                   <HBox layoutX="14.0" layoutY="152.0" prefHeight="107.0" prefWidth="222.0">
                      <children>
                         <HBox prefHeight="107.0" prefWidth="123.0">
                            <children>
-                              <VBox alignment="CENTER" prefHeight="109.0" prefWidth="87.0">
+                              <VBox alignment="CENTER" prefHeight="107.0" prefWidth="101.0">
                                  <children>
-                                    <Label alignment="BASELINE_LEFT" contentDisplay="CENTER" prefHeight="20.0" prefWidth="75.0" styleClass="titre" text="Nom_Oeuvre:">
+                                    <Label alignment="BASELINE_LEFT" contentDisplay="CENTER" prefHeight="20.0" prefWidth="97.0" styleClass="titre" text="Nom :">
                                        <font>
                                           <Font name="Futura Heavy BT" size="14.0" />
                                        </font>
                                        <VBox.margin>
-                                          <Insets bottom="7.0" right="7.0" top="-7.0" />
+                                          <Insets bottom="7.0" right="7.0" top="7.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <Label alignment="BASELINE_LEFT" prefHeight="24.0" prefWidth="88.0" styleClass="titre" text="Type">
+                                    <Label alignment="BASELINE_LEFT" prefHeight="24.0" prefWidth="111.0" styleClass="titre" text="Role :">
+                                       <opaqueInsets>
+                                          <Insets />
+                                       </opaqueInsets>
+                                       <VBox.margin>
+                                          <Insets bottom="7.0" right="7.0" top="7.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <Label alignment="BASELINE_LEFT" prefHeight="24.0" prefWidth="88.0" styleClass="titre" text="Contact :">
                                        <opaqueInsets>
                                           <Insets />
                                        </opaqueInsets>
@@ -50,15 +57,20 @@
                            <children>
                               <VBox alignment="CENTER" prefHeight="107.0" prefWidth="139.0">
                                  <children>
-                                    <Label fx:id="nom_Oeuvre" alignment="CENTER" contentDisplay="CENTER" text="Nom_Oeuvre">
+                                    <Label fx:id="nomart" alignment="CENTER" contentDisplay="CENTER" text="Nom">
                                        <padding>
                                           <Insets right="5.0" />
                                        </padding>
                                        <VBox.margin>
-                                          <Insets bottom="7.0" right="7.0" />
+                                          <Insets bottom="7.0" right="7.0" top="7.0" />
                                        </VBox.margin>
                                     </Label>
-                                    <Label fx:id="Type" alignment="CENTER" prefHeight="31.0" prefWidth="91.0" text="Type">
+                                    <Label fx:id="roleart" alignment="CENTER" contentDisplay="CENTER" prefHeight="26.0" prefWidth="91.0" text="Role">
+                                       <VBox.margin>
+                                          <Insets bottom="7.0" right="7.0" top="7.0" />
+                                       </VBox.margin>
+                                    </Label>
+                                    <Label fx:id="cantactart" alignment="CENTER" prefHeight="31.0" prefWidth="91.0" text="Contact">
                                        <VBox.margin>
                                           <Insets bottom="7.0" right="7.0" top="7.0" />
                                        </VBox.margin>
@@ -72,31 +84,14 @@
                         </HBox>
                      </children>
                   </HBox>
-                  <AnchorPane layoutX="88.0" layoutY="237.0" prefHeight="44.0" prefWidth="104.0">
-                     <children>
-                        <Button fx:id="jaimebtn" layoutX="14.0" layoutY="16.0" mnemonicParsing="false" onAction="#likeee" prefHeight="20.0" prefWidth="29.0" styleClass="clear-btn" />
-                        <Button fx:id="dislikebtn" layoutX="61.0" layoutY="16.0" mnemonicParsing="false" onAction="#dislike" prefHeight="18.0" prefWidth="30.0" styleClass="clear-btn" />
-                        <ImageView fx:id="up" fitHeight="18.0" fitWidth="21.0" layoutX="18.0" layoutY="22.0">
-                           <image>
-                              <Image url="@assets/like.png" />
-                           </image>
-                        </ImageView>
-                        <ImageView fx:id="down" fitHeight="18.0" fitWidth="21.0" layoutX="64.0" layoutY="24.0">
-                           <image>
-                              <Image url="@assets/dislike.png" />
-                           </image>
-                        </ImageView>
-                     </children>
-                  </AnchorPane>
                </children>
             </AnchorPane>
-            <HBox alignment="CENTER" prefHeight="52.0" prefWidth="238.0">
+            <HBox alignment="CENTER" prefHeight="77.0" prefWidth="266.0">
                <children>
-                  <Button mnemonicParsing="false" onAction="#openpage" prefHeight="26.0" prefWidth="87.0" styleClass="clear-btn" text="Voir Plus" />
+                  <Button mnemonicParsing="false" onAction="#openprofilepage" prefHeight="30.0" prefWidth="97.0" styleClass="clear-btn" text="Voir profile" />
                </children>
             </HBox>
          </children>
       </VBox>
-      <Label fx:id="nbr" layoutX="450.0" layoutY="105.0" prefHeight="5.0" prefWidth="28.0" text="Label" />
    </children>
 </AnchorPane>
