--- a/src/main/resources/AffActualiteUser.fxml
+++ b/src/main/resources/AffActualiteUser.fxml
@@ -51,6 +51,7 @@
                         <Font name="Futura Heavy BT" size="18.0" />
                     </font>
                 </Text>
+            <Button fx:id="BtnChat" layoutX="274.0" layoutY="11.0" mnemonicParsing="false" onAction="#naviguezVersChat" text="ChatBot" />
             </children>
         </AnchorPane>
     </children>
