--- a/src/main/resources/InscriptionInfo.fxml
+++ b/src/main/resources/InscriptionInfo.fxml
@@ -7,6 +7,7 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
+<?import org.controlsfx.control.Rating?>
 
 <AnchorPane prefHeight="600.0" prefWidth="825.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.InscriptionInfoController">
    <children>
@@ -18,29 +19,34 @@
                     <content>
                       <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="566.0" prefWidth="787.0" stylesheets="@dashboardDesign.css">
                            <children>
+
                               <ImageView fx:id="imageFor" fitHeight="366.0" fitWidth="366.0" layoutX="24.0" layoutY="43.0" pickOnBounds="true" preserveRatio="true" />
                               <Label fx:id="nomFor" layoutX="472.0" layoutY="20.0" prefHeight="69.0" prefWidth="270.0" text="NomFormation" textFill="#f3b562">
                                  <font>
                                     <Font name="Futura Heavy BT" size="36.0" />
                                  </font>
                               </Label>
-                              <Label layoutX="444.0" layoutY="138.0" styleClass="titre" text="Nom de l'artiste :" />
-                              <Label layoutX="444.0" layoutY="187.0" styleClass="titre" text="Date Début de la formation :" />
-                              <Label layoutX="442.0" layoutY="240.0" styleClass="titre" text="Date Fin de la formation :" />
-                              <Label layoutX="442.0" layoutY="297.0" styleClass="titre" text="Catégorie de la formation :" />
-                              <Label layoutX="444.0" layoutY="354.0" styleClass="titre" text="Niveau de la formation :" />
-                              <Label layoutX="442.0" layoutY="409.0" styleClass="titre" text="Description :" />
-                              <Label layoutX="593.0" layoutY="138.0" text="Artist" />
-                              <Label fx:id="dateD" layoutX="654.0" layoutY="187.0" text="Date D" />
-                              <Label fx:id="dateF" layoutX="655.0" layoutY="240.0" text="Date F" />
-                              <Label fx:id="nomCat" layoutX="654.0" layoutY="297.0" text="Cat F" />
-                              <Label fx:id="niveau" layoutX="643.0" layoutY="354.0" text="Niveau" />
-                              <Label fx:id="desc" layoutX="442.0" layoutY="436.0" text="Label" />
+                              <Label layoutX="443.0" layoutY="112.0" styleClass="titre" text="Nom de l'artiste :" />
+                              <Label layoutX="443.0" layoutY="161.0" styleClass="titre" text="Date Début de la formation :" />
+                              <Label layoutX="441.0" layoutY="214.0" styleClass="titre" text="Date Fin de la formation :" />
+                              <Label layoutX="441.0" layoutY="271.0" styleClass="titre" text="Catégorie de la formation :" />
+                              <Label layoutX="443.0" layoutY="328.0" styleClass="titre" text="Niveau de la formation :" />
+                              <Label layoutX="441.0" layoutY="383.0" styleClass="titre" text="Description :" />
+                              <Label layoutX="599.0" layoutY="114.0" text="Artist" />
+                              <Label fx:id="dateD" layoutX="701.0" layoutY="165.0" text="Date D" />
+                              <Label fx:id="dateF" layoutX="689.0" layoutY="217.0" text="Date F" />
+                              <Label fx:id="nomCat" layoutX="692.0" layoutY="274.0" text="Cat F" />
+                              <Label layoutX="499.0" layoutY="538.0" text="Votre avis est important pour nous !" />
+                              <Label fx:id="desc" layoutX="441.0" layoutY="410.0" text="Label" />
+
                               <Button layoutX="65.0" layoutY="475.0" mnemonicParsing="false" onAction="#confirmerInsc" prefHeight="59.0" prefWidth="283.0" styleClass="add-btn" text="Confirmer l'inscription">
                                  <font>
                                     <Font name="Futura Light BT" size="41.0" />
                                  </font>
                               </Button>
+                              <Rating fx:id="raitingControl" layoutX="504.0" layoutY="493.0" />
+                              <Label fx:id="ratingLabel" layoutX="197.0" layoutY="200.0" />
+                              <Label fx:id="niveau" layoutX="685.0" layoutY="330.0" text="Niveau" />
                            </children>
                         </AnchorPane>
                     </content>
