--- a/src/main/resources/AffActualiteUser.fxml
+++ b/src/main/resources/AffActualiteUser.fxml
@@ -51,7 +51,8 @@
                         <Font name="Futura Heavy BT" size="18.0" />
                     </font>
                 </Text>
-            <Button fx:id="BtnChat" layoutX="274.0" layoutY="11.0" mnemonicParsing="false" onAction="#naviguezVersChat" text="ChatBot" />
+            <Button fx:id="BtnChat" layoutX="656.0" layoutY="11.0" mnemonicParsing="false" onAction="#naviguezVersChat" prefHeight="31.0" prefWidth="89.0" text="ChatBot" />
+                <ComboBox fx:id="languageComboBox" layoutX="763.0" layoutY="11.0" />
             </children>
         </AnchorPane>
     </children>
