--- a/src/main/resources/AjouterCom.fxml
+++ b/src/main/resources/AjouterCom.fxml
@@ -1,28 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.net.*?>
 <?import javafx.scene.text.*?>
 <?import java.lang.*?>
 <?import java.util.*?>
 <?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import java.net.URL?>
 
-<AnchorPane prefHeight="458.0" prefWidth="652.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.AjouterComController">
+<AnchorPane prefHeight="665.0" prefWidth="856.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.AjouterComController">
    <children>
-      <Label layoutX="82.0" layoutY="241.0" text="Contenu :">
+      <TableView fx:id="TableView" layoutX="173.0" layoutY="143.0" prefHeight="380.0" prefWidth="510.0">
+         <columns>
+            <TableColumn fx:id="PrenomCol" prefWidth="122.0" text="Prenom" />
+            <TableColumn fx:id="TitreCol" prefWidth="102.0" text="Titre" />
+            <TableColumn fx:id="contenuCol" prefWidth="285.0" text="contenuC" />
+         </columns>
+      </TableView>
+      <Label layoutX="173.0" layoutY="542.0" text="Contenu :">
          <font>
             <Font name="System Bold" size="21.0" />
          </font>
       </Label>
-      <TextArea fx:id="ContenuTA" layoutX="195.0" layoutY="229.0" prefHeight="57.0" prefWidth="364.0" />
-      <Button fx:id="BtnAjouter" layoutX="474.0" layoutY="296.0" mnemonicParsing="false"  onAction="#AjouterCom" text="Ajouter">
+      <TextArea fx:id="ContenuTA" layoutX="285.0" layoutY="539.0" prefHeight="38.0" prefWidth="312.0" />
+      <Button fx:id="BtnAjouter" layoutX="597.0" layoutY="539.0" mnemonicParsing="false" onAction="#AjouterCom" prefHeight="38.0" prefWidth="83.0" styleClass="add-btn" stylesheets="@dashboardDesign.css" text="Ajouter">
          <font>
             <Font name="System Bold" size="17.0" />
          </font></Button>
-      <Label layoutX="162.0" layoutY="58.0" text="Commentaire" textFill="#f5be07">
+      <Label layoutX="269.0" layoutY="55.0" text="Commentaire" textFill="#f5be07">
          <font>
             <Font name="System Bold Italic" size="50.0" />
          </font>
       </Label>
    </children>
+   <stylesheets>
+      <URL value="@dashboardDesign.css" />
+      <URL value="@loginDesign.css" />
+   </stylesheets>
 </AnchorPane>
