--- a/src/main/resources/AffActualiteAdmin.fxml
+++ b/src/main/resources/AffActualiteAdmin.fxml
@@ -4,16 +4,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<?import java.lang.String?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ActualiteAdmin">
+<AnchorPane prefHeight="600.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ActualiteAdmin">
     <children>
         <AnchorPane layoutX="9.0" layoutY="13.0" prefHeight="578.0" prefWidth="830.0">
             <children>
@@ -48,7 +40,7 @@
                 </AnchorPane>
                 <Text fill="#8cbeb2" layoutX="14.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Liste des actualites disponibles :">
                     <font>
-                        <Font name="Futura Heavy BT" size="18.0" />
+                        <Font name="System Bold" size="18.0" />
                     </font>
                 </Text>
             </children>
