--- a/src/main/resources/AffActualiteUser.fxml
+++ b/src/main/resources/AffActualiteUser.fxml
@@ -4,16 +4,8 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.*?>
-<?import java.lang.String?>
-<?import javafx.scene.control.ScrollPane?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="600.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ActualiteU">
+<AnchorPane prefHeight="600.0" prefWidth="850.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ActualiteU">
     <children>
         <AnchorPane layoutX="9.0" layoutY="13.0" prefHeight="578.0" prefWidth="830.0">
             <children>
@@ -48,11 +40,10 @@
                 </AnchorPane>
                 <Text fill="#8cbeb2" layoutX="14.0" layoutY="34.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Liste des actualites disponibles :">
                     <font>
-                        <Font name="Futura Heavy BT" size="18.0" />
+                        <Font name="System Bold" size="18.0" />
                     </font>
                 </Text>
-            <Button fx:id="BtnChat" layoutX="656.0" layoutY="11.0" mnemonicParsing="false" onAction="#naviguezVersChat" prefHeight="31.0" prefWidth="89.0" text="ChatBot" />
-                <ComboBox fx:id="languageComboBox" layoutX="763.0" layoutY="11.0" />
+            <Button fx:id="BtnChat" layoutX="726.0" layoutY="11.0" mnemonicParsing="false" onAction="#naviguezVersChat" styleClass="update-btn" stylesheets="@dashboardDesign.css" prefHeight="31.0" prefWidth="89.0" text="ChatBot" />
             </children>
         </AnchorPane>
     </children>
