--- a/src/main/resources/ChatBot.fxml
+++ b/src/main/resources/ChatBot.fxml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TextArea?>
-<?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.text.Font?>
+<?import java.lang.*?>
+<?import java.net.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 
-
-<AnchorPane prefHeight="400.0" prefWidth="467.0"  xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ChatBotController">
+<AnchorPane prefHeight="400.0" prefWidth="467.0" style="-fx-background-color: #F3B562;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.ChatBotController">
     <children>
-        <AnchorPane layoutX="77.0" layoutY="9.0" prefHeight="381.0" prefWidth="317.0" style="-fx-background-color: white; -fx-background-radius: 20;" />
+        <AnchorPane layoutX="77.0" layoutY="9.0" prefHeight="381.0" prefWidth="317.0" style="-fx-background-color: white; -fx-background-radius: 20;">
+         <children>
+              <Button id="button-mezyen" layoutX="106.0" layoutY="337.0" mnemonicParsing="false" onAction="#envoyerChat" prefHeight="30.0" prefWidth="105.0" styleClass="update-btn" stylesheets="@dashboardDesign.css" text="Envoyer" />
+              <Label layoutX="111.0" layoutY="14.0" prefHeight="25.0" prefWidth="96.0" text="ChatBot">
+                  <font>
+                      <Font name="Century Gothic Bold" size="24.0" />
+                  </font>
+              </Label>
+         </children></AnchorPane>
         <TextArea fx:id="textAreaChat" editable="false" layoutX="137.0" layoutY="59.0" prefHeight="221.0" prefWidth="200.0" />
         <TextField fx:id="textFieldChat" layoutX="137.0" layoutY="295.0" prefHeight="38.0" prefWidth="200.0" />
-        <Button id="button-mezyen" layoutX="183.0" layoutY="341.0" mnemonicParsing="false" onAction="#envoyerChat" prefHeight="38.0" prefWidth="77.0" text="Envoyer" />
-        <Label layoutX="183.0" layoutY="23.0" prefHeight="25.0" prefWidth="96.0" text="ChatBot">
-            <font>
-                <Font name="Century Gothic Bold" size="24.0" />
-            </font>
-        </Label>
     </children>
+    <stylesheets>
+        <URL value="@dashboardDesign.css" />
+        <URL value="@loginDesign.css" />
+    </stylesheets>
 </AnchorPane>
