--- a/src/main/resources/AjouterCom.fxml
+++ b/src/main/resources/AjouterCom.fxml
@@ -1,15 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import java.net.*?>
-<?import javafx.scene.text.*?>
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import java.net.URL?>
+<?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="665.0" prefWidth="856.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.AjouterComController">
+<AnchorPane prefHeight="665.0" prefWidth="856.0" xmlns="http://javafx.com/javafx/17.0.2-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.AjouterComController">
    <children>
       <TableView fx:id="TableView" layoutX="173.0" layoutY="143.0" prefHeight="380.0" prefWidth="510.0">
          <columns>
@@ -24,7 +20,7 @@
          </font>
       </Label>
       <TextArea fx:id="ContenuTA" layoutX="285.0" layoutY="539.0" prefHeight="38.0" prefWidth="312.0" />
-      <Button fx:id="BtnAjouter" layoutX="597.0" layoutY="539.0" mnemonicParsing="false" onAction="#AjouterCom" prefHeight="38.0" prefWidth="83.0" styleClass="add-btn" stylesheets="@dashboardDesign.css" text="Ajouter">
+      <Button fx:id="BtnAjouter" layoutX="597.0" layoutY="539.0" mnemonicParsing="false" onAction="#AjouterCom" prefHeight="38.0" prefWidth="83.0" styleClass="update-btn" stylesheets="@dashboardDesign.css" text="Ajouter">
          <font>
             <Font name="System Bold" size="17.0" />
          </font></Button>
@@ -33,6 +29,7 @@
             <Font name="System Bold Italic" size="50.0" />
          </font>
       </Label>
+      <Button fx:id="RetourBtn" onAction="#NavigezVersListActU" styleClass="delete-btn" stylesheets="@dashboardDesign.css"layoutX="396.0" layoutY="607.0" mnemonicParsing="false" text="Retour" />
    </children>
    <stylesheets>
       <URL value="@dashboardDesign.css" />
