--- a/src/main/resources/ChatBot.fxml
+++ b/src/main/resources/ChatBot.fxml
@@ -10,12 +10,13 @@
     <children>
         <AnchorPane layoutX="77.0" layoutY="9.0" prefHeight="381.0" prefWidth="317.0" style="-fx-background-color: white; -fx-background-radius: 20;">
          <children>
-              <Button id="button-mezyen" layoutX="106.0" layoutY="337.0" mnemonicParsing="false" onAction="#envoyerChat" prefHeight="30.0" prefWidth="105.0" styleClass="update-btn" stylesheets="@dashboardDesign.css" text="Envoyer" />
+              <Button id="button-mezyen" layoutX="59.0" layoutY="339.0" mnemonicParsing="false" onAction="#envoyerChat" prefHeight="30.0" prefWidth="131.0" styleClass="update-btn" stylesheets="@dashboardDesign.css" text="Envoyer" />
               <Label layoutX="111.0" layoutY="14.0" prefHeight="25.0" prefWidth="96.0" text="ChatBot">
                   <font>
                       <Font name="Century Gothic Bold" size="24.0" />
                   </font>
               </Label>
+            <Button fx:id="RetourBtn" layoutX="196.0" layoutY="339.0" mnemonicParsing="false" styleClass="delete-btn" stylesheets="@dashboardDesign.css" text="Retour" />
          </children></AnchorPane>
         <TextArea fx:id="textAreaChat" editable="false" layoutX="137.0" layoutY="59.0" prefHeight="221.0" prefWidth="200.0" />
         <TextField fx:id="textFieldChat" layoutX="137.0" layoutY="295.0" prefHeight="38.0" prefWidth="200.0" />
