--- a/src/main/resources/ChatBot.fxml
+++ b/src/main/resources/ChatBot.fxml
@@ -16,7 +16,7 @@
                       <Font name="Century Gothic Bold" size="24.0" />
                   </font>
               </Label>
-            <Button fx:id="RetourBtn" layoutX="196.0" layoutY="339.0" mnemonicParsing="false" styleClass="delete-btn" stylesheets="@dashboardDesign.css" text="Retour" />
+            <Button fx:id="RetourBtn"  onAction="#NavigezVersListActU" layoutX="196.0" layoutY="339.0" mnemonicParsing="false" styleClass="delete-btn" stylesheets="@dashboardDesign.css" text="Retour" />
          </children></AnchorPane>
         <TextArea fx:id="textAreaChat" editable="false" layoutX="137.0" layoutY="59.0" prefHeight="221.0" prefWidth="200.0" />
         <TextField fx:id="textFieldChat" layoutX="137.0" layoutY="295.0" prefHeight="38.0" prefWidth="200.0" />
