--- a/src/main/resources/SidebarAdmin.fxml
+++ b/src/main/resources/SidebarAdmin.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import de.jensd.fx.glyphs.fontawesome.FontAwesomeIcon?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -8,18 +9,18 @@
 
 <AnchorPane id="AnchorPane" prefHeight="800.0" prefWidth="223.0" style="-fx-background-color: #8cbeb2;" styleClass="nav-form" stylesheets="@dashboardDesign.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.SidebarAdminController">
     <children>
-        <Button fx:id="stats" alignment="CENTER" layoutY="240.0" mnemonicParsing="false" onAction="#stats" prefHeight="40.0" prefWidth="223.0" styleClass="nav-btn" stylesheets="@loginDesign.css" text="Dashboard" textFill="WHITE">
+        <Button fx:id="stats" layoutY="240.0" mnemonicParsing="false" onMouseClicked="#stats" prefHeight="40.0" prefWidth="223.0" styleClass="nav-btn" stylesheets="@loginDesign.css" text="Dashboard" textFill="WHITE">
             <font>
                 <Font name="Leelawadee UI" size="17.0" />
             </font></Button>
         <AnchorPane prefHeight="220.0" prefWidth="223.0" style="-fx-background-color: #8cbeb2;">
-            <children>
-                <ImageView fitHeight="220.0" fitWidth="223.0">
-                    <image>
-                        <Image url="@assets/Capture_d_écran_2024-02-25_195559-removebg-preview.png" />
-                    </image>
-                </ImageView>
-            </children>
+         <children>
+            <ImageView fitHeight="184.0" fitWidth="200.0" layoutX="12.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../Desktop/PiDev/logo%20png.png" />
+               </image>
+            </ImageView>
+         </children>
         </AnchorPane>
         <Button fx:id="listut" alignment="CENTER" layoutY="280.0" mnemonicParsing="false" onAction="#listut" prefHeight="40.0" prefWidth="223.0" styleClass="nav-btn" stylesheets="@loginDesign.css" text="Liste utilisateurs" textFill="WHITE">
             <font>
@@ -55,5 +56,12 @@
                 <Font size="17.0" />
             </font>
         </Button>
+      <FontAwesomeIcon fill="WHITE" glyphName="DASHBOARD" layoutX="45.0" layoutY="265.0" size="1.5em" />
+      <FontAwesomeIcon fill="WHITE" glyphName="USER" layoutX="46.0" layoutY="387.0" size="1.5em" text="" wrappingWidth="18.228559494018555" />
+      <FontAwesomeIcon fill="WHITE" glyphName="USER" layoutX="44.0" layoutY="347.0" size="1.5em" text="" wrappingWidth="18.228559494018555" />
+      <FontAwesomeIcon fill="WHITE" glyphName="USERS" layoutX="41.0" layoutY="306.0" size="1.5em" />
+      <FontAwesomeIcon fill="WHITE" glyphName="AREA_CHART" layoutX="45.0" layoutY="426.0" size="1.5em" />
+      <FontAwesomeIcon fill="WHITE" glyphName="USERS" layoutX="41.0" layoutY="466.0" size="1.5em" />
+      <FontAwesomeIcon fill="WHITE" glyphName="SEND" layoutX="42.0" layoutY="506.0" size="1.5em" />
     </children>
 </AnchorPane>
