--- a/src/main/resources/StatUser.fxml
+++ b/src/main/resources/StatUser.fxml
@@ -7,9 +7,8 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
-<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.StatUserController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" stylesheets="@dashboardDesign.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controllers.StatUserController">
 
     <children>
         <BarChart fx:id="barChart" layoutX="118.0" layoutY="238.0" prefHeight="266.0" prefWidth="500.0" title="Nombres d'utilisateurs">
@@ -20,10 +19,6 @@
                 <NumberAxis fx:id="yAxis" side="LEFT" />
             </yAxis>
         </BarChart>
-        <Text fill="#5c4b51" layoutX="224.0" layoutY="48.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Statistique sur utilisateurs" textAlignment="CENTER">
-            <font>
-                <Font name="System Bold" size="24.0" />
-            </font></Text>
         <AnchorPane layoutY="65.0" prefHeight="154.0" prefWidth="742.0">
             <children>
                 <AnchorPane layoutX="29.0" layoutY="14.0" prefHeight="126.0" prefWidth="200.0" styleClass="left-form" stylesheets="@loginDesign.css">
@@ -72,6 +67,7 @@
                 </AnchorPane>
             </children>
         </AnchorPane>
+      <Label layoutX="30.0" layoutY="28.0" styleClass="titre" text="Dashboard" />
     </children>
     <styleClass>
         <String fx:value="white-bg" />
